--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -1,13 +1,18 @@
 .board {
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
 }
 
 .card {
     background-color: #333;
     border: 1px blue solid;
-    height: 50px;
-    width: 50px;
+    height: 60px;
+    width: 60px;
     margin: 10px;
     line-height: 50px;
+}
+
+.card.hidden {
+    display: hidden;
+    border: none;
+    background-color: transparent;
 }
